--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </video>
         </div>
         <h1 class="logo">Welcome to BHNM</h1>
-         <button class="btn">Shop Now</button>
+         <a href="shop.html"><button class="btn">Shop Now</button></a>
 
     </header>
 
@@ -102,14 +102,14 @@
                 </p>
             </div>
             <div class="feature">
-                <img src="img/best-products.png" alt="Best Products Icon">
+                <img src="img/best-products.png" >
                 <h3>The Best Products</h3>
                 <p>
                     At BHNM, we are passionate about providing the most fun and unique products available. Our team is constantly on the lookout for the latest trends and most exciting items, so we can offer a vast selection that is both surprising and inspiring.
                 </p>
             </div>
             <div class="feature">
-                <img src="img/customer-service.png" alt="Customer Service Icon">
+                <img src="img/customer-service.png" >
                 <h3>Excellent Customer Service</h3>
                 <p>
                     Whether you need help placing an order, want advice on our products, or need assistance with a return, our friendly and knowledgeable customer service team is here to help. You can reach us by email: info@BHNM.com. We aim to respond to all inquiries within 24 hours, so please do not hesitate to contact us.
@@ -123,6 +123,16 @@
     </div>
 </section>
 
+
+
+
+<footer class="f1">
+    <p>&copy; 2025 BHNM. All rights reserved.</p>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-solid fa-x"></i>
+</footer>
 
 
 
