--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Shop - BHNM</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
 
@@ -30,7 +31,7 @@
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-        <h1 class="logo">Welcome to BHNM</h1>
+        <h1 class="logo">Shop Now to BHNM</h1>
 
     </header>
 
@@ -142,6 +143,16 @@
 
     </main>
 </section>
+
+
+
+<footer class="f1">
+    <p>&copy; 2025 BHNM. All rights reserved.</p>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-solid fa-x"></i>
+</footer>
 
 
 
