--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
 </head>
 <body>
 
@@ -31,10 +33,46 @@
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
+        <h1 class="logo">Contact BHNM</h1>
 
     </header>
 
+<br>
+<br>
 
+<section class="contact-us">
+    <h1>Get In Touch</h1>
+    <form>
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="Your name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Your email" required>
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="tel" id="phone" placeholder="Phone Number" required>
+        </div>
+        <div class="form-group">
+            <label for="message">Message</label>
+            <textarea id="message" placeholder="Your message..." required></textarea>
+        </div>
+        <button type="submit" class="send-btn">Send Message</button>
+    </form>
+</section>
+
+<br>
+<br>
+
+<footer class="f1">
+    <p>&copy; 2025 BHNM. All rights reserved.</p>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-solid fa-x"></i>
+</footer>
 
 </body>
 </html>
