--- a/contact.html
+++ b/contact.html
@@ -74,5 +74,10 @@
         <i class="fa-solid fa-x"></i>
 </footer>
 
+
+
+
+<script type="text/javascript" src="js/main.js"></script>
+
 </body>
 </html>
