--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,27 +14,24 @@
 
 
 <header>
-        <nav>
-
-            <h1 class="rotate-logo">BHNM</h1>
-            <ul>
-                <a href="index.html"><li>HOME</li></a>
-                <a href="shop.html"><li>SHOP NOW</li></a>
-                <a href="contact.html"><li>CONTACT US</li></a>
-            </ul>
-
-            <div class="icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
-            </div>
-
-        </nav>
+    <nav>
+        <div class="menu-toggle">&#9776;</div>
+        <h1 class="rotate-logo">BHNM</h1>
+        <ul>
+            <a href="index.html"><li>HOME</li></a>
+            <a href="shop.html"><li>SHOP NOW</li></a>
+            <a href="contact.html"><li>CONTACT US</li></a>
+        </ul>
+        <div class="icons">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-bag-shopping"></i>
+        </div>
+    </nav>
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-        <h1 class="logo">Contact BHNM</h1>
 
     </header>
 
