--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,28 +11,28 @@
 <body>
     <header>
         <nav>
+    <div class="menu-toggle">&#9776;</div>
+    <h1 class="rotate-logo">BHNM</h1>
+    <ul>
+        <a href="index.html"><li>HOME</li></a>
+        <a href="shop.html"><li>SHOP NOW</li></a>
+        <a href="contact.html"><li>CONTACT US</li></a>
+    </ul>
 
-            <h1 class="rotate-logo">BHNM</h1>
-            <ul>
-                <a href="index.html"><li>HOME</li></a>
-                <a href="shop.html"><li>SHOP NOW</li></a>
-                <a href="contact.html"><li>CONTACT US</li></a>
-            </ul>
+    <div class="icons">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-bag-shopping"></i>
+    </div>
 
-            <div class="icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
-            </div>
+    
+</nav>
 
-        </nav>
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-        <h1 class="logo">Welcome to BHNM</h1>
-         <a href="shop.html"><button class="btn">Shop Now</button></a>
-
+       
     </header>
 
 
@@ -78,50 +79,42 @@
 </section>
 
 
-
-<section class="about-us">
-    <div class="content">
+ <div class="about-container">
+    <div class="about-header">
+      <div class="about-text">
         <h1>About Us</h1>
-        <p>
-            At BHNM, we're more than just a brand—we're a movement. We blend street style with ice jewelry to create pieces that symbolize strength and ambition. Embrace the cold, turn it into fuel, and step into a brighter tomorrow with us.
-        </p>
-
-        <div class="features">
-            <div class="feature">
-                <img src="img/delivery.png" alt="Delivery Icon">
-                <h3>Delivery</h3>
-                <p>
-                    At BHNM, we strive to deliver your order quickly and efficiently. Delivery times typically range from 5 to 10 business days, depending on your location and the product.
-                </p>
-            </div>
-            <div class="feature">
-                <img src="img/payment.jpg" alt="Secure Payment Icon">
-                <h3>Secure Payment</h3>
-                <p>
-                    Whether you choose iDeal, Bancontact, Credit Card or any other payment method, all our transactions are processed through secure payment gateways that meet the highest industry standards for data protection. Your personal and financial information is securely encrypted and protected at all times.
-                </p>
-            </div>
-            <div class="feature">
-                <img src="img/best-products.png" >
-                <h3>The Best Products</h3>
-                <p>
-                    At BHNM, we are passionate about providing the most fun and unique products available. Our team is constantly on the lookout for the latest trends and most exciting items, so we can offer a vast selection that is both surprising and inspiring.
-                </p>
-            </div>
-            <div class="feature">
-                <img src="img/customer-service.png" >
-                <h3>Excellent Customer Service</h3>
-                <p>
-                    Whether you need help placing an order, want advice on our products, or need assistance with a return, our friendly and knowledgeable customer service team is here to help. You can reach us by email: info@BHNM.com. We aim to respond to all inquiries within 24 hours, so please do not hesitate to contact us.
-                </p>
-            </div>
-        </div>
+        <p>At BHNM, we’re more than just a brand—we’re a movement. We blend street style with ice jewelry to create pieces that symbolize strength and ambition. Embrace the cold, turn it into fuel, and step into a brighter tomorrow with us.</p>
+      </div>
+      <div class="about-logo">
+        <img src="img/BNHM.jpg" >
+      </div>
     </div>
 
-    <div class="logo">
-        <img src="img/BNHM.jpg" alt="BHNM Logo">
+    <div class="features">
+      <div class="feature">
+        <img src="img/delivery.png" >
+        <h3>DELIVERY</h3>
+        <p>We strive to deliver your order quickly and efficiently. Delivery times typically range from 5 to 10 business days depending on your location and the product.</p>
+      </div>
+      <div class="feature">
+        <img src="img/payment.jpg" >
+        <h3>SECURE PAYMENT</h3>
+        <p>We use secure payment systems that meet the highest standards for data protection. Your information is encrypted and safe.</p>
+      </div>
+      <div class="feature">
+        <img src="img/producticon.png" >
+        <h3>THE BEST PRODUCTS</h3>
+        <p>We're always on the lookout for the latest trends so we can offer you a wide selection that's both surprising and inspiring.</p>
+      </div>
+      <div class="feature">
+        <img src="img/service.jpg" >
+        <h3>EXCELLENT CUSTOMER SERVICE</h3>
+        <p>Need help or have a question? Our support team is here for you. Reach us via email and we’ll get back to you within 24 hours.</p>
+      </div>
     </div>
-</section>
+  </div>
+<br>    
+<br>    
 
 
 
