--- a/shop.html
+++ b/shop.html
@@ -1,37 +1,35 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Shop - BHNM</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Shop - BHNM</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
 
 
-	 <header>
+     <header>
         <nav>
-
+            <div class="menu-toggle">&#9776;</div>
             <h1 class="rotate-logo">BHNM</h1>
             <ul>
                 <a href="index.html"><li>HOME</li></a>
                 <a href="shop.html"><li>SHOP NOW</li></a>
                 <a href="contact.html"><li>CONTACT US</li></a>
             </ul>
-
             <div class="icons">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-bag-shopping"></i>
             </div>
-
         </nav>
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-        <h1 class="logo">Shop Now to BHNM</h1>
 
     </header>
 
@@ -67,6 +65,8 @@
                 <h6>2,699.50€</h6>
                 <h5>2,399.50€</h5>
             </div>
+
+            
         </div>
 
         <br>
