--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <title>BHNM</title>
+    <link rel="Icon" type="jpg" href="img/BNHM.jpg">
+    <title>BHNM Website</title>
 </head>
 <body>
     <header>
         <nav>
     <div class="menu-toggle">&#9776;</div>
-    <h1 class="rotate-logo">BHNM</h1>
+    <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
+
+<div class="sidebar-menu">
+    <span class="close-btn">&times;</span>
     <ul>
-        <a href="index.html"><li>HOME</li></a>
-        <a href="shop.html"><li>SHOP NOW</li></a>
-        <a href="contact.html"><li>CONTACT US</li></a>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="shop.html">SHOP NOW</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
     </ul>
+</div>
 
-    <div class="icons">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <i class="fa-solid fa-bag-shopping"></i>
-    </div>
+<div class="icons">
+    <i class="fa-solid fa-magnifying-glass"></i>
+    <i class="fa-solid fa-bag-shopping"></i>
+</div>
 
-    
 </nav>
 
         <div class="video-container">
@@ -32,7 +36,6 @@
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-       
     </header>
 
 
