--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Contact BHNM</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link rel="Icon" type="jpg" href="img/BNHM.jpg">
 
 </head>
 <body>
@@ -14,27 +15,33 @@
 
 
 <header>
-    <nav>
-        <div class="menu-toggle">&#9776;</div>
-        <h1 class="rotate-logo">BHNM</h1>
-        <ul>
-            <a href="index.html"><li>HOME</li></a>
-            <a href="shop.html"><li>SHOP NOW</li></a>
-            <a href="contact.html"><li>CONTACT US</li></a>
-        </ul>
-        <div class="icons">
-            <i class="fa-solid fa-magnifying-glass"></i>
-            <i class="fa-solid fa-bag-shopping"></i>
-        </div>
-    </nav>
+        <nav>
+    <div class="menu-toggle">&#9776;</div>
+    <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
+
+<div class="sidebar-menu">
+    <span class="close-btn">&times;</span>
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="shop.html">SHOP NOW</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
+    </ul>
+</div>
+
+<div class="icons">
+    <i class="fa-solid fa-magnifying-glass"></i>
+    <i class="fa-solid fa-bag-shopping"></i>
+</div>
+
+</nav>
+
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-
+       
     </header>
-
 <br>
 <br>
 
