--- a/shop.html
+++ b/shop.html
@@ -7,30 +7,38 @@
     <title>Shop - BHNM</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+        <link rel="Icon" type="jpg" href="img/BNHM.jpg">
 </head>
 <body>
 
 
      <header>
         <nav>
-            <div class="menu-toggle">&#9776;</div>
-            <h1 class="rotate-logo">BHNM</h1>
-            <ul>
-                <a href="index.html"><li>HOME</li></a>
-                <a href="shop.html"><li>SHOP NOW</li></a>
-                <a href="contact.html"><li>CONTACT US</li></a>
-            </ul>
-            <div class="icons">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
-            </div>
-        </nav>
+    <div class="menu-toggle">&#9776;</div>
+    <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
+
+<div class="sidebar-menu">
+    <span class="close-btn">&times;</span>
+    <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="shop.html">SHOP NOW</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
+    </ul>
+</div>
+
+<div class="icons">
+    <i class="fa-solid fa-magnifying-glass"></i>
+    <i class="fa-solid fa-bag-shopping"></i>
+</div>
+
+</nav>
+
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
-
+       
     </header>
 
 
@@ -66,7 +74,7 @@
                 <h5>2,399.50€</h5>
             </div>
 
-            
+
         </div>
 
         <br>
