--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <nav>
-    <div class="menu-toggle">&#9776;</div>
+    <div class="menu-toggle" >&#9776;</div>
     <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
 
-<div class="sidebar-menu">
+<div class="sidebar-menu" >
     <span class="close-btn">&times;</span>
     <ul>
         <li><a href="index.html">HOME</a></li>
@@ -26,7 +26,7 @@
 
 <div class="icons">
     <i class="fa-solid fa-magnifying-glass"></i>
-    <i class="fa-solid fa-bag-shopping"></i>
+<i class="fa-solid fa-bag-shopping" style="color: #ffffff;"></i>
 </div>
 
 </nav>
@@ -36,16 +36,23 @@
                 <source src="img/video.mp4" type="video/mp4">
             </video>
         </div>
+
+        <div class="top-text">
+  <h1>WELCOME TO<br><span>BHNM UNIQUE</span></h1>
+  <a href="shop.html" class="shop-btn">SHOP NOW</a>
+</div>
+
     </header>
 
 
 
     <section>
     <main>
-        <h1>BNHM's Collection</h1>
-        <h2>PRODUCTS</h2>
-        <h3>NEW ARRIVALS</h3>
-
+    <section class="collection-section">
+          <h1 class="h1-title">BHNM's Collection</h1>
+          <p class="p-products">PRODUCTS</p>
+          <h2 class="h2-new">NEW ARRIVALS</h2>
+    </section>
         <div class="products-grid">
             <div class="product-card">
                 <span class="off">New</span>
@@ -92,6 +99,9 @@
         <img src="img/BNHM.jpg" >
       </div>
     </div>
+
+    <hr>
+    <br>
 
     <div class="features">
       <div class="feature">
