--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,16 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="Icon" type="jpg" href="img/BNHM.jpg">
-
 </head>
 <body>
 
 
 
-<header>
-        <nav>
+<header class="header2">
+        <nav class="nav1">
     <div class="menu-toggle">&#9776;</div>
-    <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
+    <a href="index.html"><h1 class="rotate-logo">BHNM</h1></a>
 
 <div class="sidebar-menu">
     <span class="close-btn">&times;</span>
@@ -35,38 +33,41 @@
 
 </nav>
 
-        <div class="video-container">
-            <video autoplay muted loop>
-                <source src="img/video.mp4" type="video/mp4">
-            </video>
-        </div>
        
     </header>
 <br>
 <br>
 
-<section class="contact-us">
-    <h1>Get In Touch</h1>
-    <form>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Your name" required>
+<section class="contact-section" class="collection-section">
+    <h2 class="h2-new">CONTACT US</h2>
+    <form id="contact-form" class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+    <input type="hidden" name="access_key" value="e045b458-72f1-4847-81c2-2062899a66d9">
+    <form class="contact-form">
+        <div class="form-row">
+            <div class="form-group">
+                <label>Name</label>
+                <input type="text" placeholder="Your name" required>
+                <span class="required">*</span>
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input type="email" placeholder="Your email" required>
+                <span class="required">*</span>
+            </div>
+            <div class="form-group">
+                <label>Phone</label>
+                <input type="tel" placeholder="Phone Number" required>
+                <span class="required">*</span>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Your email" required>
+        <div class="form-group full-width">
+            <label>Message</label>
+            <textarea placeholder="Your message..." rows="6" required></textarea>
         </div>
-        <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="Phone Number" required>
-        </div>
-        <div class="form-group">
-            <label for="message">Message</label>
-            <textarea id="message" placeholder="Your message..." required></textarea>
-        </div>
-        <button type="submit" class="send-btn">Send Message</button>
+        <button type="submit" class="submit-button">Send Message</button>
     </form>
 </section>
+
 
 <br>
 <br>
