--- a/shop.html
+++ b/shop.html
@@ -12,10 +12,10 @@
 <body>
 
 
-     <header>
-        <nav>
+     <header class="header1">
+        <nav class="nav1">
     <div class="menu-toggle">&#9776;</div>
-    <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
+    <a href="index.html"><h1 class="rotate-logo">BHNM</h1></a>
 
 <div class="sidebar-menu">
     <span class="close-btn">&times;</span>
@@ -32,22 +32,16 @@
 </div>
 
 </nav>
-
-        <div class="video-container">
-            <video autoplay muted loop>
-                <source src="img/video.mp4" type="video/mp4">
-            </video>
-        </div>
        
     </header>
 
 
 <section>
     <main>
-        <h1>BNHM's Collection</h1>
-        <h2>PRODUCTS</h2>
-        <h3>NEW ARRIVALS</h3>
-
+    <section class="collection-section">
+          <h1 class="h1-title">BNHM's Collection</h1>
+          <p class="h2-new">PRODUCTS</p>
+    </section>
        <div class="products-grid">
             <div class="product-card">
                 <img src="img/bape1.jpg" >
@@ -140,7 +134,14 @@
     </main>
 </section>
 
-
+<ul class="brand-logos">
+  <li><img src="img/bapelogo.jpg"></li>
+  <li><img src="foto/samsung.png" ></li>
+  <li><img src="foto/msi.png"></li>
+  <li><img src="foto/steelseries.png" ></li>
+  <li><img src="foto/logitech.png"></li>
+  <li><img src="foto/hyperx.png"></li>
+</ul>
 
 <footer class="f1">
     <p>&copy; 2025 BHNM. All rights reserved.</p>
