--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="icons">
     <i class="fa-solid fa-magnifying-glass"></i>
-<i class="fa-solid fa-bag-shopping" style="color: #ffffff;"></i>
+        <i class="fa-solid fa-bag-shopping"></i>
 </div>
 
 </nav>
@@ -55,32 +55,32 @@
     </section>
         <div class="products-grid">
             <div class="product-card">
-                <span class="off">New</span>
+                <span class="new">New</span>
                 <img src="img/bape1.jpg" >
                 <p>Abc Camo Shark Full Zip Hoodie</p>
                 <h6>489,50€</h6>
                 <h5>449,50€</h5>
             </div>
             <div class="product-card">
-                <span class="off">New</span>
+                <span class="new">New</span>
                 <img src="img/bape2.jpg" >
-                <p>BAPE 1st Camo Shark Slim Sweatpants 'Green'</p>
+                <p>BHNM 1st Camo Shark Slim Sweatpants 'Green'</p>
                 <h6>395.50€</h6>
                 <h5>340.50€</h5>
             </div>
             <div class="product-card">
-                <span class="off">New</span>
-                <img src="img/bape3.jpg" >
-                <p>BAPE STA #1 MENS</p>
-                <h6>309.50€</h6>
-                <h5>110.00€</h5>
-            </div>
-            <div class="product-card">
-                <span class="off">New</span>
+                <span class="new">New</span>
                 <img src="img/bape4.jpg">
                 <p>Abc Camo Nylon Hooded Jacket</p>
                 <h6>2,699.50€</h6>
                 <h5>2,399.50€</h5>
+            </div>
+            <div class="product-card">
+                <span class="new">New</span>
+                <img src="img/bape9.png" >
+                <p>BHNM X Suicoke Sandals</p>
+                <h6>309.50€</h6>
+                <h5>110.00€</h5>
             </div>
         </div>
 
@@ -129,7 +129,14 @@
 <br>    
 <br>    
 
-
+<ul class="brand-logos">
+  <li><img src="img/bapelogo.jpg"></li>
+  <li><img src="img/supreme.png" ></li>
+  <li><img src="img/tommy.png" style="max-height: 130px;"></li>
+  <li><img src="img/diesel.png" ></li>
+  <li><img src="img/lacoste.png" style="max-height:130px;"></li>
+  <li><img src="img/stussy.jpg" style="max-height:130px;"></li>
+</ul>
 
 
 <footer class="f1">
