--- a/shop.html
+++ b/shop.html
@@ -42,62 +42,30 @@
           <h1 class="h1-title">BNHM's Collection</h1>
           <p class="h2-new">PRODUCTS</p>
     </section>
-       <div class="products-grid">
-            <div class="product-card">
-                <img src="img/bape1.jpg" >
-                <p>Abc Camo Shark Full Zip Hoodie</p>
-                <h6>489,50€</h6>
-                <h5>449,50€</h5>
-            </div>
-            <div class="product-card">
-                <img src="img/bape2.jpg" >
-                <p>BAPE 1st Camo Shark Slim Sweatpants 'Green'</p>
-                <h6>395.50€</h6>
-                <h5>340.50€</h5>
-            </div>
-            <div class="product-card">
-                <img src="img/bape3.jpg" >
-                <p>BAPE STA #1 MENS</p>
-                <h6>309.50€</h6>
-                <h5>110.00€</h5>
-            </div>
-            <div class="product-card">
-                <img src="img/bape4.jpg">
-                <p>Abc Camo Nylon Hooded Jacket</p>
-                <h6>2,699.50€</h6>
-                <h5>2,399.50€</h5>
-            </div>
-
-
-        </div>
-
-        <br>
-        <br>
-
         <div class="products-grid">
             <div class="product-card">
-                <img src="img/bape1.jpg" >
-                <p>Abc Camo Shark Full Zip Hoodie</p>
-                <h6>489,50€</h6>
-                <h5>449,50€</h5>
+                <img src="img/f4.png" >
+                <p>Astro Bomber Jacket</p>
+                <h6>400.50€</h6>
+                <h5>330.50€</h5>
+            </div>
+                 <div class="product-card">
+                <img src="img/f6.png" >
+                <p>Knit Pants - Black</p>
+                <h6>205.50€</h6>
+                <h5>160.50€</h5>
             </div>
             <div class="product-card">
-                <img src="img/bape2.jpg" >
-                <p>BAPE 1st Camo Shark Slim Sweatpants 'Green'</p>
-                <h6>395.50€</h6>
-                <h5>340.50€</h5>
+                <img src="img/f14.png">
+                <p>BHNM Hoodie "Black"</p>
+                <h6>160.50€</h6>
+                <h5>140.50€</h5>
             </div>
             <div class="product-card">
-                <img src="img/bape3.jpg" >
-                <p>BAPE STA #1 MENS</p>
-                <h6>309.50€</h6>
-                <h5>110.00€</h5>
-            </div>
-            <div class="product-card">
-                <img src="img/bape4.jpg">
-                <p>Abc Camo Nylon Hooded Jacket</p>
-                <h6>2,699.50€</h6>
-                <h5>2,399.50€</h5>
+                <img src="img/bape3.png" >
+                <p>BHNM STA #1 M1</p>
+                <h6>240.50€</h6>
+                <h5>210.00€</h5>
             </div>
         </div>
 
@@ -106,28 +74,118 @@
 
         <div class="products-grid">
             <div class="product-card">
-                <img src="img/bape1.jpg" >
-                <p>Abc Camo Shark Full Zip Hoodie</p>
-                <h6>489,50€</h6>
-                <h5>449,50€</h5>
+                <img src="img/bape5.png" >
+                <p>Abc Camo Crochet Relaxed Fit Shark Full Zip Hoodie</p>
+                <h6>489.50€</h6>
+                <h5>449.50€</h5>
             </div>
             <div class="product-card">
-                <img src="img/bape2.jpg" >
-                <p>BAPE 1st Camo Shark Slim Sweatpants 'Green'</p>
+                <img src="img/bape6.png" >
+                <p>Abc Camo Shark Regular Fit Sweat Pants</p>
                 <h6>395.50€</h6>
                 <h5>340.50€</h5>
             </div>
             <div class="product-card">
-                <img src="img/bape3.jpg" >
-                <p>BAPE STA #1 MENS</p>
-                <h6>309.50€</h6>
-                <h5>110.00€</h5>
-            </div>
-            <div class="product-card">
-                <img src="img/bape4.jpg">
+                <img src="img/bape7.png">
                 <p>Abc Camo Nylon Hooded Jacket</p>
                 <h6>2,699.50€</h6>
                 <h5>2,399.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/bape8.png" >
+                <p>BHNM STA #1 MENS</p>
+                <h6>309.50€</h6>
+                <h5>110.00€</h5>
+            </div>
+        </div>
+
+        <br>
+        <br>
+        
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="img/f1.png" >
+                <p>Astronaut Bomber „Light Grey“</p>
+                <h6>489.50€</h6>
+                <h5>449.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/f2.png" >
+                <p>Pillow Pants „Light Grey“</p>
+                <h6>345.50€</h6>
+                <h5>310.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/f3.png">
+                <p>Knit Hoodie - Black</p>
+                <h6>230.50€</h6>
+                <h5>190.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/bape10.png" >
+                <p>BHNM STA M1</p>
+                <h6>320.50€</h6>
+                <h5>285.50€</h5>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="img/f9.png" >
+                <p>Knit Hoodie - Brown</p>
+                <h6>220.50€</h6>
+                <h5>190.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/f10.png" >
+                <p>Knit Pants - Brown</p>
+                <h6>180.50€</h6>
+                <h5>160.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/f7.png">
+                <p>BHNM Sweater "Light Brown"</p>
+                <h6>140.50€</h6>
+                <h5>110.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/bape11.png" >
+                <p>BHNM Flip STA #1 M2</p>
+                <h6>420.50€</h6>
+                <h5>405.00€</h5>
+            </div>
+        </div>
+
+        <br>
+        <br>
+
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="img/f12.png" >
+                <p>BHNM Hoodie "Pink"</p>
+                <h6>160.50€</h6>
+                <h5>140.50€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/f11.png" >
+                <p  >BHNM Shorts "Pink"</p>
+                <h6>100€</h6>
+                <h5>80€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/f13.png"  >
+                <p>Teddy Beanie - Pink</p>
+                <h6>60€</h6>
+                <h5>40€</h5>
+            </div>
+            <div class="product-card">
+                <img src="img/bape12.png"  >
+                <p>BHNM X Cactus Jack X Don Toliver Road STA M2</p>
+                <h6>420.50€</h6>
+                <h5>405.00€</h5>
             </div>
         </div>
 
@@ -136,11 +194,11 @@
 
 <ul class="brand-logos">
   <li><img src="img/bapelogo.jpg"></li>
-  <li><img src="foto/samsung.png" ></li>
-  <li><img src="foto/msi.png"></li>
-  <li><img src="foto/steelseries.png" ></li>
-  <li><img src="foto/logitech.png"></li>
-  <li><img src="foto/hyperx.png"></li>
+  <li><img src="img/supreme.png" ></li>
+  <li><img src="img/tommy.png" style="max-height: 130px;"></li>
+  <li><img src="img/diesel.png" ></li>
+  <li><img src="img/lacoste.png" style="max-height:130px;"></li>
+  <li><img src="img/stussy.jpg" style="max-height:130px;"></li>
 </ul>
 
 <footer class="f1">
