--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,12 @@
     <div class="menu-toggle">&#9776;</div>
     <a href="index.html"><h1 class="rotate-logo">BHNM</h1></a>
 
+    <div class="icons">
+            <i class="fa-solid fa-magnifying-glass" ></i>
+            <i class="fa-solid fa-bag-shopping" ></i>
+            <i class="fa-solid fa-bag-shopping" ></i>
+        </div>
+
 <div class="sidebar-menu">
     <span class="close-btn">&times;</span>
     <ul>
@@ -26,9 +32,6 @@
     </ul>
 </div>
 
-<div class="icons">
-    <i class="fa-solid fa-magnifying-glass"></i>
-</div>
 
 </nav>
 
