--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h6>2,699.50€</h6>
                 <h5>2,399.50€</h5>
             </div>
-            <div class="product-card" data-toggle="modal" data-target="#productModal" data-name="BHNM STA #1 MENS" data-price="250.00€" data-image="img/bape9.png" data-description="Stylish sneakers for men.">
+            <div class="product-card" data-toggle="modal" data-target="#productModal" data-name="BHNM STA #1 MENS" data-price="250.00€" data-image="img/bape9.png" data-description="Stylish Suicoke Sandals for men.">
                 <img src="img/bape9.png" >
                 <p>BHNM X Suicoke Sandals</p>
                 <h6>309.50€</h6>
