--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
     <div class="menu-toggle" >&#9776;</div>
-    <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
+    <h1 class="rotate-logo">BHNM</h1>
 
     
 
@@ -159,7 +159,7 @@
   <li><img src="img/tommy.png" style="max-height: 130px;"></li>
   <li><img src="img/diesel.png" ></li>
   <li><img src="img/lacoste.png" style="max-height:130px;"></li>
-  <li><img src="img/stussy.jpg" style="max-height:130px;"></li>
+  <li><img src="img/stussy.png" style="max-height:130px;"></li>
 </ul>
 
 <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
