--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     </main>
 </section>
 
-
+<hr class="hr" style="border-bottom: 1px solid black; width: 76%;">
+    
  <div class="about-container">
     <div class="about-header">
       <div class="about-text">
@@ -121,7 +122,7 @@
       </div>
     </div>
 
-    <hr>
+<hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
     <br>
 
     <div class="features">
@@ -150,7 +151,7 @@
 
 <br>    
 <br>    
-    <hr>
+<hr class="hr" style="border-bottom: 1px solid black; width: 76%;">
 
 
 <ul class="brand-logos">
