--- a/index.html
+++ b/index.html
@@ -185,6 +185,22 @@
     </div>
 </div>
 
+<div class="modal fade" id="paymentSuccessModal" tabindex="-1" role="dialog" aria-labelledby="paymentSuccessModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="paymentSuccessModalLabel">Payment Successful</h5>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Your payment was successful! Thank you for your purchase.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-darker" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <footer class="f1">
