--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p>We strive to deliver your order quickly and efficiently. Delivery times typically range from 5 to 10 business days depending on your location and the product.</p>
       </div>
       <div class="feature">
-        <img src="img/payment.jpg" >
+        <img src="img/payment.png" >
         <h3>SECURE PAYMENT</h3>
         <p>We use secure payment systems that meet the highest standards for data protection. Your information is encrypted and safe.</p>
       </div>
