--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="Icon" type="jpg" href="img/BNHM.jpg">
     <title>BHNM Website</title>
 </head>
+<style type="text/css">
+   @media (min-width: 230px) and (max-width:768px) {
+    #cartIcon {
+        display: none;
+    }
+
+    .btn-darker {
+        display: none;
+    }
+}
+</style>
 <body>
     <header>
         <nav>
